# phylogenetic-analysis-of-coptic-influence-on-egyptian-arabic

./: .gitignore  README.md  extract_features_from_grambank.py  pyproject.toml  tree_changes_code_book.csv
data/: ML.Log.txt  afro-asiatic.tree  arab1395.phylo.xml  arabic.tree  features.csv  log_GB020.Log.txt  log_GB021.Log.txt  log_GB022.Log.txt  log_GB023.Log.txt  log_GB030.Log.txt  log_GB031.Log.txt  log_GB035.Log.txt  log_GB039.Log.txt  log_GB041.Log.txt  log_GB043.Log.txt  log_GB051.Log.txt  log_GB059.Log.txt  log_GB068.Log.txt  log_GB069.Log.txt  log_GB070.Log.txt  log_GB071.Log.txt  log_GB072.Log.txt  log_GB073.Log.txt  log_GB075.Log.txt  log_GB079.Log.txt  log_GB080.Log.txt  log_GB081.Log.txt  log_GB082.Log.txt  log_GB083.Log.txt  log_GB084.Log.txt  log_GB086.Log.txt  log_GB089.Log.txt  log_GB090.Log.txt  log_GB091.Log.txt  log_GB092.Log.txt  log_GB093.Log.txt  log_GB094.Log.txt  log_GB095.Log.txt  log_GB099.Log.txt  log_GB107.Log.txt  (+154 more)
manuscript/: bibliography.bib  main.tex
scripts/: .Rhistory  BayesTraits.Rmd  convert_feature_into_trait_file.py  extract_features_from_grambank.py  generate_trait_file.py  generate_trait_files.py  max_likelihood_control.txt  max_likelihood_control_GB020.txt  max_likelihood_control_GB021.txt  max_likelihood_control_GB022.txt  max_likelihood_control_GB023.txt  max_likelihood_control_GB025.txt  max_likelihood_control_GB030.txt  max_likelihood_control_GB031.txt  max_likelihood_control_GB035.txt  max_likelihood_control_GB039.txt  max_likelihood_control_GB041.txt  max_likelihood_control_GB043.txt  max_likelihood_control_GB051.txt  (+66 more)
(+191 files in other folders)
