[project]
name = "phylogenetic-analysis-of-coptic-influence-on-egyptian-arabic"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "pandas>=3.0.3",
    "numpy>=2.5.0",
    "pycldf>=2.0.2",
]

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
